[package]
name = "image2pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { version = "0.5", features = ["embedded_images"] }
clap = { version = "3.1.14", features = ["derive"] }
anyhow = "1.0.57"
regex = "1"
colored = "2"
