[package]
name = "image2pdf"
version = "0.1.0"
authors = ["Tu Mai <tu.mai@outlook.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "A CLI convert multiple images into 1 pdf file"
homepage = "https://github.com/anhtumai/image2pdf"
repository = "https://github.com/anhtumai/image2pdf"
keywords = ["image", "pdf"]
categories = ["command-line-utilities"]
exclude = ["./assets/*", "./target/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { version = "0.5", features = ["embedded_images"] }
clap = { version = "3.1.14", features = ["derive"] }
anyhow = "1.0.57"
regex = "1"
colored = "2"
num = "0.4"
byteorder = "1.4.3"
